--- a/about.html
+++ b/about.html
@@ -74,6 +74,7 @@
             <a href="https://www.facebook.com/TealizeWrite/" target="_blank" class="res_btn">從 <b>FB</b> 找學校創辦人</a>
             <a href="https://www.instagram.com/tealize_write/" target="_blank" class="res_btn">從 <b>IG</b> 找學校創辦人</a>
             <a href="https://www.plurk.com/Tealize" target="_blank" class="res_btn">從 <b>Plurk</b> 找學校創辦人</a>
+			<a href="https://tealize-write.github.io/Tealize/" target="_blank" class="res_btn">學校創辦人的基地</a>
             
             <a href="author-quiz.html" class="res_btn" style="background: var(--accent-color); color: #1c1917; font-weight: bold; margin-top: 20px;">
                 【回測驗頁】
