--- a/author-quiz.html
+++ b/author-quiz.html
@@ -502,6 +502,7 @@
                 <h2 style="margin-top: 50px;">背景資料</h2>
                 <nav class="btn-container">
                     <a href="about.html" target="new" class="res_btn" style="border-color: #aaa; color: #aaa;">測驗與學院的設計</a>
+					<a href="https://tealize-write.github.io/Tealize/" target="_blank" class="res_btn">學校創辦人的基地</a>
                 </nav>
             </div>
         </section>
