--- a/green.html
+++ b/green.html
@@ -75,6 +75,7 @@
             <div class="btn-container">
                 <button class="res_btn" onclick="window.location.href='index.html'">再測一次</button>
                 <button class="res_btn" onclick="window.location.href='about.html'"><b>測驗與學院的設計</b></button>
+				<a href="https://tealize-write.github.io/Tealize/" target="_blank" class="res_btn">學校創辦人的基地</a>
             </div>
         </div>
     </div>
